--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@chakra-ui/react": "^3.24.2",
     "@emotion/react": "^11.14.0",
     "@prisma/client": "^6.14.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.4.7",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
